--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
 services:
   polyglotpdf:
-    build: .
+    build: .                     # 从当前目录的 Dockerfile 构建镜像
+    image: polyglotpdf:latest    # 显式设置镜像名为 polyglotpdf:latest
+    container_name: polyglotpdf  # 显式设置容器名为 polyglotpdf
     ports:
-      - "5100:5100"
+      - "12226:12226"            # 将容器的 12226 端口映射到主机的 12226 端口
     volumes:
-      - ./config.json:/app/config.json
+      - ./config.json:/app/config.json  # 将本地 config.json 映射到容器内
     environment:
-      - PORT=5100
+      - PORT=12226               # 设置环境变量 PORT=12226
+    restart: always              # 容器退出后总是重启
